--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "radix-vue": "^1.9.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
@@ -42,6 +43,7 @@
     "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@types/uuid": "^10.0.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
