--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.2",
     "@vee-validate/nuxt": "^4.13.2",
-    "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,8 +28,7 @@
     "vee-validate": "^4.13.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.1.14",
